style.css
@import url("https://fonts.googleapis.com/css2?family=Delicious+Handrawn&family=Josefin+Sans:wght@300;400&family=Lato:wght@300&family=Montserrat:wght@300;400&family=Roboto:wght@100&family=Source+Sans+Pro:wght@300&display=swap");

* {
  margin: auto;
  box-sizing: border-box;
}

body {
  width: 500px;
  font-family: "Josefin Sans", sans-serif;
}
.header {
  padding: 10px;
  height: 12vh;
  justify-content: space-between;
  background-color: rgba(255, 153, 0, 0.323);
}
.header_element {
  margin-bottom: 5px;
}

#switchToApp {
  background-color: black;
  color: white;
  border-radius: 5px;
  font-size: 0.7rem;
  width: 100px;
  height: 30px;
  cursor: pointer;
}

.switchToApp:hover {
  background-color: white;
  color: black;
}

#cleartripIcon {
  height: 10vh;
  width: 30vw;
  object-fit: contain;
  margin-left: 10px;
}
#loginButton {
  background-color: white;
  color: grey;
  border-radius: 15px;
  margin-right: 10px;
  border: 1px solid gray;
}
#userIcon {
  height: 20px;
  width: 30px;
  object-fit: contain;
}
.cleartripLogin {
  display: flex;
  justify-content: space-between;
  margin: 10px;
}
.icon {
  height: 40px;
  width: 40px;
  object-fit: contain;
}
.bodyIcons {
  display: flex;
  justify-content: space-around;
}
.bodyIconText {
  font-size: 1.5rem;
}

.iconContainer {
  width: 150px;
  display: flex;
}
hr {
  margin-top: 5px;
}
h5 {
  color: rgba(0, 0, 0, 0.642);
}
.bodyInput {
  margin: 10px;
  margin-bottom: 25px;
}
.dates {
  display: flex;
  justify-content: space-between;
  margin: 0;
  gap: 35vw;
}
.bodyElement {
  margin-top: 10px;
  margin-bottom: 10px;
}
input {
  height: 30px;
  border: none;
  font-weight: bold;
  font-size: 1.1rem;
}

#searchButton {
  width: 90vw;
  height: 30px;
  background-color: rgb(247, 119, 40);
  border: none;
  color: white;
  font-size: 1.1rem;
  font-weight: bold;
}
#searchContainer {
  display: flex;
}
#footer {
  display: flex;
}

.footerOptions {
  display: flex;
  flex-direction: column;
}
#recentlySearched {
}

